# PyEasyCon

./: .gitattributes  .gitignore  NOTE.md  README.md  RNG启动.bat  calibration.py  convert_to_il.py  default.yaml  demo_script.py  download_sprites.py  easycon_api.py  gui.py  launch_gui.py  ollama-cpu-deploy.md  print_rng_logs.py  requirements.txt  run.bat  run_gui.bat  run_rng.bat  run_rng_gui.py  run_scan_gui.py  run_training_gui.py  script_dratini.py  script_gyarados.py  script_mankey.py  script_poliwag.py  script_porygon.py  script_rattata.py  script_slot777.py  script_spearow.py  setup-aliyun.bat  setup.bat  setup_glm.py  start_easycon.bat  start_vllm-aliyun.bat  start_vllm-aliyun.sh  start_vllm.bat  start_vllm.ps1  start_vllm.sh  使用说明.txt  (+5 more)
assets/: basepoints.py  game_text.json  game_text.py
config/: default.yaml
easycon/: __init__.py  config.py  context.py  controller.py  image_label.py  protocol.py  recognizer.py  serial_transport.py
examples/: custom_test.py  dev_hit_tid.py  ev_train.py  game_corner_slot777.py  rng.py  rng_caterpie.py  rng_clefairy.py  rng_dratini.py  rng_eevee.py  rng_ekans.py  rng_geodude.py  rng_gyarados.py  rng_jigglypuff.py  rng_mankey.py  rng_meowth.py  rng_nidoran♀.py  rng_nidoran♂.py  rng_oddish.py  rng_paras.py  rng_pikachu.py  rng_poliwag.py  rng_porygon.py  rng_rattata.py  rng_spearow.py  rng_weedle.py  rng_zubat.py  scan.py  training.py
gui/: __init__.py  app.py  script_engine.py
labels/: 3代书柜.IL  3代兑换选择.IL  3代关键词BAG选中.IL  3代关键词Bait.IL  3代关键词Ball.IL  3代关键词Gotcha.IL  (+54 more)
modules/tenlines/src/pybind/: CMakeLists.txt  setup.py
(+283 files in other folders)
